welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:5: error: ';' expected but 'else' found.
	}else{
         ^Program:22: error: ';' expected but '[' found.
}[/!]
 ^