welcome.lessons.welcome.methods.returning.MethodsReturning.scala.code
def haveBaggle():Boolean = {
	id (vuBiscuit==true){
		return true;
	}else{
		return false;
	}
}[/!]



def vuBiscuit():Boolean = {
	for(k <- 0 to 6){
		avance();
		if(estSurBiscuit==true){
			return true;
		}
	}
	for ( k <- 0 to 6){
		recule();
	}
}[/!]
